# jdeskew

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cog.yaml  estimator.py  main.py  pyproject.toml  reproduce.ipynb  setup.py
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  dependency-review.yml  docker-build-and-push.yml  greetings.yml  python-package.yml  python-publish.yml  stale.yml
jdeskew/: __init__.py  estimator.py  jdeskew.py  utility.py
tests/: test.py
