[build-system]
requires = [
         "setuptools>=42",
         "setuptools_scm[toml]",
         "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "jdeskew"
description = "Document Image Skew Estimation using Adaptive Radial Projection"
authors = [{name = "Luan Pham", email = "phamquiluan@gmail.com"}]
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "opencv-python-headless"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "coverage",
    "pre-commit",
    "pytest-xdist",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [ "tests/test.png" ]
